<resources>
    <string name="app_name">Riviera</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_button">Login</string>
    <string name="company">Company</string>
    <string name="new_account">Create an Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_events">EventsActivity</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_different_passwords">Both passwords must be the same</string>


    <string name="title_activity_example_tab">ExampleTab</string>
    <string name="title_activity_tab1">Tab1</string>
    <string name="title_activity_tab2">Tab2</string>
    <string name="title_activity_sign_up">signUpActivity</string>
    <string name="title_activity_names_list">NamesListActivity</string>
    <string name="title_activity_candidate_profile">CandidateProfileActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>

    <!--Candidate Profile-->
    <string name="resume_title">Resume</string>
    <string name="jobtype_title">Job Type</string>
    <string name="internship_radio">Internship</string>
    <string name="full_time_radio">Full-Time</string>
    <string name="interests_title">Interests</string>
    <string name="mobile_checkbox">Mobile</string>
    <string name="frontend_checkbox">Frontend</string>
    <string name="backend_checkbox">Backend</string>
    <string name="BizOps_checkbox">BizOps</string>
    <string name="weakeness_title">Weaknesses</string>
    <string name="pm_checkbox">PM</string>
    <string name="gpa_checkbox">GPA</string>
    <string name="exp_checkbox">Exp</string>
    <string name="culture_checkbox">Culture</string>
    <string name="mission_checkbox">Mission</string>
    <string name="rating_title">Rating</string>
    <string name="rating_1">1</string>
    <string name="rating_2">2</string>
    <string name="rating_3">3</string>
    <string name="rating_4">4</string>
    <string name="rating_5">5</string>
    <string name="notes_title">Notes</string>
    <string name="save_button">Save</string>
    <string name="title_activity_add_event">AddEvent</string>

    <string name="hello_world">Hello world!</string>

</resources>
