<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        style="@style/BackgroundImage"
        android:id="@+id/background_img"
        android:src="@drawable/background" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="@dimen/side_margin"
        android:layout_marginRight="@dimen/side_margin"
        android:id="@+id/logo"
        android:src="@drawable/logo"
        android:layout_gravity="center_horizontal" />

    <EditText
        style="@style/TextEntry"
        android:inputType="textEmailAddress"
        android:hint="@string/login_email"
        android:id="@+id/login_email"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/logo" />

    <EditText
        style="@style/TextEntry"
        android:inputType="textPassword"
        android:hint="@string/login_password"
        android:id="@+id/login_password"
        android:layout_below="@+id/login_email" />

    <Button
        style="@style/ButtonTheme"
        android:text="@string/login_button"
        android:layout_marginTop="@dimen/vertical_margin"
        android:layout_marginLeft="@dimen/side_margin"
        android:layout_marginRight="@dimen/side_margin"
        android:id="@+id/login_button"
        android:layout_below="@+id/login_password"
        android:textStyle="normal"
        android:onClick="handleLoginButton" />

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:id="@+id/sign_up_button"
        android:fontFamily="sans-serif-light"
        android:background="@android:color/transparent"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/bottom_margin"
        android:textSize="30dp"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:layout_centerHorizontal="true"
        android:onClick="handleSignUpButton" />

</RelativeLayout>

    <!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. -->
    <!--<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:tools="http://schemas.android.com/tools" android:id="@+id/drawer_layout"-->
    <!--android:layout_width="match_parent" android:layout_height="match_parent"-->
    <!--tools:context=".MainActivity">-->

    <!-- As the main content view, the view below consumes the entire
         space available using match_parent in both dimensions. -->
    <!--<FrameLayout android:id="@+id/container" android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent" />-->

    <!-- android:layout_gravity="start" tells DrawerLayout to treat
         this as a sliding drawer on the left side for left-to-right
         languages and on the right side for right-to-left languages.
         If you're not building against API 17 or higher, use
         android:layout_gravity="left" instead. -->
    <!-- The drawer is given a fixed width in dp and extends the full height of
         the container. -->
    <!--<fragment android:id="@+id/navigation_drawer"-->
    <!--android:layout_width="@dimen/navigation_drawer_width" android:layout_height="match_parent"-->
    <!--android:layout_gravity="start"-->
    <!--android:name="cs294.riviera.com.riviera.NavigationDrawerFragment"-->
    <!--tools:layout="@layout/fragment_navigation_drawer" />-->

    <!--</android.support.v4.widget.DrawerLayout>-->